--- a/test/BUILD
+++ b/test/BUILD
@@ -2,7 +2,10 @@ load("@rules_cc//cc:defs.bzl", "cc_test")
 
 cc_test(
     name = "instructions_test",
-    srcs = ["instructions/r_type_test.cc"],
+    srcs = [
+        "instructions/r_type_test.cc",
+        "instructions/i_type_test.cc"
+        ],
     deps = [
         "//src:instructions",
         "@googletest//:gtest_main",
