--- a/test/BUILD
+++ b/test/BUILD
@@ -4,7 +4,8 @@ cc_test(
     name = "instructions_test",
     srcs = [
         "instructions/r_type_test.cc",
-        "instructions/i_type_test.cc"
+        "instructions/i_type_test.cc",
+        "instructions/s_type_test.cc"
         ],
     deps = [
         "//src:instructions",
