--- a/test/BUILD
+++ b/test/BUILD
@@ -6,7 +6,8 @@ cc_test(
         "instructions/r_type_test.cc",
         "instructions/i_type_test.cc",
         "instructions/s_type_test.cc",
-        "instructions/b_type_test.cc"
+        "instructions/b_type_test.cc",
+        "instructions/u_type_test.cc"
         ],
     deps = [
         "//src:instructions",
