Finished 4KiB Memory (RAM)

--- a/src/devices/BUILD
+++ b/src/devices/BUILD
@@ -1,8 +1,20 @@
-load("@rules_cc//cc:defs.bzl", "cc_binary")
+load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
     name = "devices",
-    srcs = ["device.cc"],
     hdrs = ["device.h"],
-    deps = ["//src/common:common"]
+    deps = ["//src/common:common"],
+    visibility = ["//visibility:public"]
+)
+
+cc_library(
+    name = "memory",
+    srcs = ["memory.cc"],
+    hdrs = ["memory.h"],
+    deps = [
+        "//src/common:common",
+        "devices",
+        "//src/exceptions:exceptions"
+        ],
+    visibility = ["//visibility:public"]
 )
