--- a/src/exceptions/BUILD
+++ b/src/exceptions/BUILD
@@ -2,6 +2,10 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
     name = "exceptions",
-    hdrs = ["register_file_exception.h"],
+    hdrs = [
+        "register_file_exception.h",
+        "device_exception.h",
+        "memory_exception.h",
+    ],
     visibility = ["//visibility:public"]
 )
