--- a/src/devices/BUILD
+++ b/src/devices/BUILD
@@ -1,10 +1,12 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
-    name = "devices",
+    name = "device_interface",
     hdrs = ["device.h"],
-    deps = ["//src/common:common"],
-    visibility = ["//visibility:public"]
+    deps = [
+        "//src/common:common",
+        "//src/exceptions:exceptions"
+    ]
 )
 
 cc_library(
@@ -12,8 +14,7 @@ cc_library(
     srcs = ["memory.cc"],
     hdrs = ["memory.h"],
     deps = [
-        "devices",
-        "//src/exceptions:exceptions"
+        "device_interface"
         ],
     visibility = ["//visibility:public"]
 )
@@ -23,8 +24,16 @@ cc_library(
     srcs = ["simple_uart.cc"],
     hdrs = ["simple_uart.h"],
     deps = [
-        "devices",
-        "//src/exceptions:exceptions"
+        "device_interface"
+    ],
+    visibility = ["//visibility:public"]
+)
+
+cc_library(
+    name = "devices",
+    deps = [
+        "memory",
+        "uart"
     ],
     visibility = ["//visibility:public"]
 )
